Fix broken styles

--- a/src/components/ArticleBody/styles.module.scss
+++ b/src/components/ArticleBody/styles.module.scss
@@ -175,6 +175,14 @@
       margin: 0.9em 0 1.8em;
     }
 
+    .gatsby-highlight {
+      background-color: var(--code-background);
+      border-radius: 0.3em;
+      margin: 0.5em 16px 1.8em;
+      -webkit-overflow-scrolling: touch;
+      overflow: auto;
+    }
+
     /* Prism.js */
     pre[class*="language-"],
     code[class*="language-"] {
@@ -198,7 +206,10 @@
     }
 
     pre[class*="language-"] {
-      padding: 1em;
+      overflow: visible;
+      display: inline-block;
+      margin: 1em;
+      padding: 0;
 
       &.line-numbers {
         padding-left: 3.6em;
@@ -223,32 +234,6 @@
       word-wrap: break-word;
     }
 
-    .gatsby-highlight {
-      background-color: var(--code-background);
-      border-radius: 0.3em;
-      margin: 0.5em 16px 1.8em;
-      -webkit-overflow-scrolling: touch;
-      overflow: auto;
-
-      pre[class*="language-"] {
-        overflow: visible;
-        display: inline-block;
-        margin: 1em;
-        padding: 0;
-      }
-
-      @include media-breakpoint-down(md) {
-        margin-left: 13px;
-        margin-right: 13px;
-      }
-
-      @include media-breakpoint-down(sm) {
-        border-radius: 0;
-        margin-left: -15px;
-        margin-right: -15px;
-      }
-    }
-
     .monospace {
       pre[class*="language-"],
       code[class*="language-"] {
@@ -258,6 +243,17 @@
           width: 1em;
         }
       }
+    }
+
+    @include media-breakpoint-down(md) {
+      margin-left: 13px;
+      margin-right: 13px;
+    }
+
+    @include media-breakpoint-down(sm) {
+      border-radius: 0;
+      margin-left: -15px;
+      margin-right: -15px;
     }
 
     table:global(:not(.highlight)) {
