--- a/src/components/NavItem/styles.module.scss
+++ b/src/components/NavItem/styles.module.scss
@@ -40,41 +40,39 @@
 }
 
 .link {
-  :global {
-    .dropdown-menu > li > & {
-      padding: 15px 24px;
-    }
+  :global(.dropdown-menu) > li > & {
+    padding: 15px 24px;
+  }
 
-    .dropdown-menu > li > &,
-    .navbar-nav > li > & {
-      display: block;
+  :global(.dropdown-menu) > li > &,
+  :global(.navbar-nav) > li > & {
+    display: block;
+    color: var(--nav-color);
+    padding: 20px 30px;
+    transition: background-color 0.3s;
+    white-space: nowrap;
+
+    &:hover,
+    &:focus {
+      background-color: var(--nav-hover);
       color: var(--nav-color);
-      padding: 20px 30px;
-      transition: background-color 0.3s;
-      white-space: nowrap;
-
-      &:hover,
-      &:focus {
-        background-color: var(--nav-hover);
-        color: var(--nav-color);
-        text-decoration: none;
-      }
-
-      @include media-breakpoint-up(md) {
-        padding: 20px 24px;
-      }
-
-      @include media-breakpoint-down(sm) {
-        padding: 12px;
-      }
+      text-decoration: none;
     }
 
-    &.dropdown-toggle::after {
-      margin-left: 4px;
+    @include media-breakpoint-up(md) {
+      padding: 20px 24px;
+    }
 
-      @include media-breakpoint-down(sm) {
-        display: none;
-      }
+    @include media-breakpoint-down(sm) {
+      padding: 12px;
+    }
+  }
+
+  &:global(.dropdown-toggle)::after {
+    margin-left: 4px;
+
+    @include media-breakpoint-down(sm) {
+      display: none;
     }
   }
 }
