--- a/src/styles/themes/_dark.scss
+++ b/src/styles/themes/_dark.scss
@@ -33,7 +33,7 @@
   --blockquote-border: #484848;
   --table-border: #62666b;
   --code-background: #2d2d2d;
-  --code-prompt: #708090;
+  --code-prompt: #999;
   --info-background: #3d4f52;
   --info-color: #c3c4c7;
   --info-border: #5a7a80;
